service/kube/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: finalechat
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
      containers:
        - name: postgres
          image: postgres:16.1-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql/data
        - name: rclone-backup
          image: ericflo/rclone-backup:latest
          imagePullPolicy: Always
          command:
            ["rclone-backup", "--source", "/var/lib/postgresql/data/pgdata"]
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql/data
