service/kube/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: finalechat
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
