service/kube/service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: finalechat
spec:
  type: NodePort
  ports:
    - port: 7025
      targetPort: 7025
      protocol: TCP
  selector:
    app: service
