service/kube/service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service
  namespace: finalechat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/client-body-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-stream-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: public
  defaultBackend:
    service:
      name: service
      port:
        number: 7025
  tls:
    - secretName: service-api-cert
      hosts:
        - api.finalechat.com
  rules:
    - host: api.finalechat.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: service
                port:
                  number: 7025
